--- a/wiki/PageName.wiki
+++ b/wiki/PageName.wiki
@@ -24,13 +24,13 @@ Here follows some examples for features found in Stackless Python. There are exa
 
 This example shows the basic usage of Stackless and shows a function that combined with its manager handles sleeping tasklets.
 
-scheduleNormal.py - [http://stacklessexamples.googlecode.com/svn/trunk/examples/scheduleNormal.py Download]
+*scheduleNormal.py* - [http://stacklessexamples.googlecode.com/svn/trunk/examples/scheduleNormal.py Download]
 
 === Factorial ===
 
 Factorial example using stackless to break Python's recurtion limit of 1000
 
-factorial.py - [http://stacklessexamples.googlecode.com/svn/trunk/examples/factorial.py Download]
+*factorial.py* - [http://stacklessexamples.googlecode.com/svn/trunk/examples/factorial.py Download]
 
 == Threading ==
 
@@ -38,13 +38,13 @@ factorial.py - [http://stacklessexamples.googlecode.com/svn/trunk/examples/facto
 
 The Stackless scheduler is directly linked to the current thread, so if you use more than one thread, the tasklets you create on each will be local to that thread. You can see the thread-safe Sleep function independently manage the tasklets that were added on any given thread on that thread.
 
-threadscheduling.py - [http://stacklessexamples.googlecode.com/svn/trunk/examples/threadscheduling.py Download]
+*threadscheduling.py* - [http://stacklessexamples.googlecode.com/svn/trunk/examples/threadscheduling.py Download]
 
 === Channels and Threads ===
 
 Tasklets can work between channels regardless of which thread the tasklets belong to. This example demonstrates a shared sleep function which works on the initial main thread and handles sleeps from tasklets on both itself and an identical second spawned thread. It isn't recommended that this approach be used, as the 'preference' attribute of the channel does not work with regard to tasklets from another thread and these tasklets are always preferred being switched to immediately.
 
-interThreadChannels.py - [http://stacklessexamples.googlecode.com/svn/trunk/examples/interThreadChannels.py Download]
+*interThreadChannels.py* - [http://stacklessexamples.googlecode.com/svn/trunk/examples/interThreadChannels.py Download]
 
 == Channels ==
 
