Edited wiki page through web user interface.

--- a/wiki/StacklessExamples.wiki
+++ b/wiki/StacklessExamples.wiki
@@ -135,13 +135,13 @@ For more information on PB check: http://twistedmatrix.com/projects/core/documen
 
 Demonstrates the use of Stackless with Twisted to implement a web server. It has a downside in that Stackless' scheduling cannot run while Twisted blocks.
 
-*TwistedWebserver.py* - [http://stacklessexamples.googlecode.com/svn/trunk/examples/twisted/TwistedWebserver.py Download]
+*!TwistedWebserver.py* - [http://stacklessexamples.googlecode.com/svn/trunk/examples/twisted/TwistedWebserver.py Download]
 
 === Twisted Threaded Webserver ===
 
 Demonstrates the use of Stackless with Twisted to implement a web server. Unlike the previous example Twisted is run in a separate thread from the Stackless scheduler, which allows tasklets to continue executing while Twisted blocks.
 
-*TwistedWebserverThreaded.py* - [http://stacklessexamples.googlecode.com/svn/trunk/examples/twisted/TwistedWebserverThreaded.py Download]
+*!TwistedWebserverThreaded.py* - [http://stacklessexamples.googlecode.com/svn/trunk/examples/twisted/TwistedWebserverThreaded.py Download]
 
 
 == -- Graphical Interfaces -- ==
@@ -150,6 +150,6 @@ Demonstrates the use of Stackless with Twisted to implement a web server. Unlike
 
 Demonstrates the integration of Stackless with PyQt GUI framework. A taskled take care of the interface refresh and updates while other tasklets runs the agents.
 
-*ProdConPyQt.py* - [http://stacklessexamples.googlecode.com/svn/trunk/examples/pyqt/producer-consumer/ProdConPyQt.py Download]
-*ProdConPyQt_ui.py* - [http://stacklessexamples.googlecode.com/svn/trunk/examples/pyqt/producer-consumer/ProdConPyQt_ui.py Download]
+*!ProdConPyQt.py* - [http://stacklessexamples.googlecode.com/svn/trunk/examples/pyqt/producer-consumer/ProdConPyQt.py Download]
+*!ProdConPyQt_ui.py* - [http://stacklessexamples.googlecode.com/svn/trunk/examples/pyqt/producer-consumer/ProdConPyQt_ui.py Download]
 
