--- a/wiki/StacklessExamples.wiki
+++ b/wiki/StacklessExamples.wiki
@@ -118,7 +118,7 @@ In this example, most of the time is spent in the Twisted event loop. This appro
 
 Because of the possibility that a deferred operation completes immediately, a channel subclass is used to hold the value and return it without any rescheduling. stackless.channel.send() would otherwise block the tasklet before it could call stackless.channel.receive().
 
-*!TwistedYielddeferReactorControl.py* - http://stacklessexamples.googlecode.com/svn/trunk/examples/twisted/TwistedYielddeferReactorControl.py Download]
+*!TwistedYielddeferReactorControl.py* - [http://stacklessexamples.googlecode.com/svn/trunk/examples/twisted/TwistedYielddeferReactorControl.py Download]
 
 === Twisted Perspective Broker Producer-Consumer ===
 
@@ -154,4 +154,3 @@ Demonstrates the integration of Stackless with PyQt GUI framework. A taskled tak
 *!ProdConPyQt.py* - [http://stacklessexamples.googlecode.com/svn/trunk/examples/pyqt/producer-consumer/ProdConPyQt.py Download]
 
 *!ProdConPyQt_ui.py* - [http://stacklessexamples.googlecode.com/svn/trunk/examples/pyqt/producer-consumer/ProdConPyQt_ui.py Download]
-
