Edited wiki page through web user interface.

--- a/wiki/StacklessNonblockModules.wiki
+++ b/wiki/StacklessNonblockModules.wiki
@@ -4,7 +4,7 @@
 
 These modules allow seamless integration to sockets and fileIO in a nonblocking fashion. They can be used substituting the original python modules.
 
-=== Stackless compatible socket module ===
+=== Stackless compatible socket module using asyncore ===
 
 The existing socket module is not usable naturally in a blocking manner with Stackless because of the way that the tasklets share a thread. If a tasklet blocks in the sense that whatever it has done blocks the thread, then this blocks all the tasklets until the operation is complete. Using the standard asyncore module allows asynchronous socket usage, and by adding a minor amount of support code using channels to block calls to it until an error or a result happens, a functionally equivalent socket module replacement can be created.
 
