--- a/wiki/StacklessNetworking.wiki
+++ b/wiki/StacklessNetworking.wiki
@@ -2,13 +2,19 @@
 
 = -- Networking -- =
 
-=== Stackless compatible socket module ===
+=== Stackless compatible socket module using asyncore ===
 
 The existing socket module is not usable naturally in a blocking manner with Stackless because of the way that the tasklets share a thread. If a tasklet blocks in the sense that whatever it has done blocks the thread, then this blocks all the tasklets until the operation is complete. Using the standard asyncore module allows asynchronous socket usage, and by adding a minor amount of support code using channels to block calls to it until an error or a result happens, a functionally equivalent socket module replacement can be created.
 
 This replacement module when used allows socket operations which only block the current tasklet, allowing any other tasklets which are scheduled to continue to run while the current tasklet's network operation is handled asynchronously. What was the current tasklet continues running with the result when the operation is complete. If this module is installed in place of the built-in socket module, then all existing code (whether in the standard library or provided by yourself) which uses the built-in version should inherit this behaviour allowing that existing code to be executable in parallel through the use of tasklets.
 
 *stacklesssocket.py* - [http://stacklessexamples.googlecode.com/svn/trunk/examples/networking/stacklesssocket.py Download]
+
+=== Stackless compatible socket module using libevent / pyevent ===
+
+This module performs the same function as stacklesssocket.py, but replaces asyncore with libevent / pyevent for higher performance.
+
+*socketlibevent.py* - [http://stacklessexamples.googlecode.com/svn/trunk/examples/networking/socketlibevent.py Download]
 
 === Simple HTTP Server ===
 
