--- a/wiki/StacklessNetworking.wiki
+++ b/wiki/StacklessNetworking.wiki
@@ -12,7 +12,7 @@ This replacement module when used allows socket operations which only block the 
 
 === Stackless compatible socket module using libevent / pyevent ===
 
-This module performs the same function as stacklesssocket.py, but replaces asyncore with libevent / pyevent for higher performance. (Experimental. Buggy | Broken. Caution! Danger!)
+This module performs the same function as stacklesssocket.py, but replaces asyncore with libevent / pyevent, aiming for higher performance.
 
 *socketlibevent.py* - [http://stacklessexamples.googlecode.com/svn/trunk/examples/networking/socketlibevent.py Download]
 
