--- a/wiki/StacklessNonblockModules.wiki
+++ b/wiki/StacklessNonblockModules.wiki
@@ -14,7 +14,7 @@ This replacement module when used allows socket operations which only block the 
 
 === Stackless compatible socket module using libevent / pyevent ===
 
-This module performs the same function as stacklesssocket.py, but replaces asyncore with libevent / pyevent, aiming for higher performance.
+This module performs the same function as stacklesssocket.py, but replaces asyncore with libevent (via pyevent), aiming for higher performance. Includes basic SSL support.
 
 *socketlibevent.py* - [http://stacklessexamples.googlecode.com/svn/trunk/examples/networking/socketlibevent.py Download]
 
