--- a/wiki/StacklessTwisted.wiki
+++ b/wiki/StacklessTwisted.wiki
@@ -42,8 +42,16 @@ Demonstrates the use of Stackless with Twisted to implement a web server. It has
 
 *!TwistedWebserver.py* - [http://stacklessexamples.googlecode.com/svn/trunk/examples/twisted/TwistedWebserver.py Download]
 
+2010 Note. As of 2008, this is an obsolete approach. I wrote this when I didn't know better. I will soon remove this example.
+
 === Twisted Threaded Webserver ===
 
 Demonstrates the use of Stackless with Twisted to implement a web server. Unlike the previous example Twisted is run in a separate thread from the Stackless scheduler, which allows tasklets to continue executing while Twisted blocks.
 
+2010 Note. As of 2008, this is an obsolete approach. I wrote this when I didn't know better. I will soon remove this example.
+
 *!TwistedWebserverThreaded.py* - [http://stacklessexamples.googlecode.com/svn/trunk/examples/twisted/TwistedWebserverThreaded.py Download]
+
+=== simpleSanta.py ===
+
+Demonstrates the use of Twisted and the new stackless.select() method in solving a non-trivial concurrency problem - John Trono's <a href="http://delivery.acm.org/10.1145/190000/187391/p8-trono.pdf?key1=187391&key2=2436321921&coll=DL&dl=ACM&CFID=113381262&CFTOKEN=31691828">The Santa Claus Problem</a>
