--- a/wiki/StacklessExamples.wiki
+++ b/wiki/StacklessExamples.wiki
@@ -97,4 +97,7 @@ using another system thread to run the sleeping tasklets manager.
 
 == Experimenting with New Stackless Features ==
 
+*stackless_v2.py* -
+[https://bitbucket.org/pyalec/useless/src/tip/useless/_sleeping.py Download]
+
 PyPy&#44;s stackless.py is a python based implementation of Stackless Python. stackless.py is not a full implementation of Stackless Python. Since stackless.py is written in Python and implements the API, it makes a great testbed for prototyping new features. This modified version of stackless.py implements a stackless.select() that is similar to Newsqueak/Go's select, albeit not a language feature. 
