--- a/wiki/StacklessExamples.wiki
+++ b/wiki/StacklessExamples.wiki
@@ -100,4 +100,4 @@ using another system thread to run the sleeping tasklets manager.
 *stackless_v2.py* -
 [http://code.google.com/p/stacklessexamples/downloads/detail?name=stackless_v2.py]
 
-PyPy&#44;s stackless.py is a python based implementation of Stackless Python. stackless.py is not a full implementation of Stackless Python. Since stackless.py is written in Python and implements the API, it makes a great testbed for prototyping new features. This modified version of stackless.py implements a stackless.select() that is similar to Newsqueak/Go's select, albeit not a language feature. 
+PyPy stackless.py is a python based implementation of Stackless Python. stackless.py is not a full implementation of Stackless Python. Since stackless.py is written in Python and implements the API, it makes a great testbed for prototyping new features. This modified version of stackless.py implements a stackless.select() that is similar to Newsqueak/Go's select, albeit not a language feature. 
