--- a/wiki/StacklessExamples.wiki
+++ b/wiki/StacklessExamples.wiki
@@ -97,7 +97,7 @@ using another system thread to run the sleeping tasklets manager.
 
 == Experimenting with New Stackless Features ==
 
-*stackless_v2.py* -
-[http://code.google.com/p/stacklessexamples/downloads/detail?name=stackless_v2.py]
+*stackless.py* -
+[http://stacklessexamples.googlecode.com/svn/trunk/sandbox/select/stackless.py]
 
-PyPy stackless.py is a python based implementation of Stackless Python. stackless.py is not a full implementation of Stackless Python. Since stackless.py is written in Python and implements the API, it makes a great testbed for prototyping new features. This modified version of stackless.py implements a stackless.select() that is similar to Newsqueak/Go's select, albeit not a language feature. Please see the Santa Claus example to see how stackless.select() can be used [http://code.google.com/p/stacklessexamples/downloads/detail?name=simpleSanta.py]
+PyPy stackless.py is a python based implementation of Stackless Python. stackless.py is not a full implementation of Stackless Python. Since stackless.py is written in Python and implements the API, it makes a great testbed for prototyping new features. This modified version of stackless.py implements a stackless.select() that is similar to Newsqueak/Go's select, albeit not a language feature. Please see the Santa Claus example to see how stackless.select() can be used [http://stacklessexamples.googlecode.com/svn/trunk/sandbox/select/simpleSanta.py]
