--- a/wiki/StacklessExamples.wiki
+++ b/wiki/StacklessExamples.wiki
@@ -98,6 +98,6 @@ using another system thread to run the sleeping tasklets manager.
 == Experimenting with New Stackless Features ==
 
 *stackless.py* -
-[http://stacklessexamples.googlecode.com/svn/trunk/sandbox/select/stackless.py]
+[http://stacklessexamples.googlecode.com/svn/trunk/sandbox/select/stackless.py Download]
 
-PyPy stackless.py is a python based implementation of Stackless Python. stackless.py is not a full implementation of Stackless Python. Since stackless.py is written in Python and implements the API, it makes a great testbed for prototyping new features. This modified version of stackless.py implements a stackless.select() that is similar to Newsqueak/Go's select, albeit not a language feature. Please see the Santa Claus example to see how stackless.select() can be used [http://stacklessexamples.googlecode.com/svn/trunk/sandbox/select/simpleSanta.py]
+PyPy stackless.py is a python based implementation of Stackless Python. stackless.py is not a full implementation of Stackless Python. Since stackless.py is written in Python and implements the API, it makes a great testbed for prototyping new features. This modified version of stackless.py implements a stackless.select() that is similar to Newsqueak/Go's select, albeit not a language feature. Please see the Santa Claus example to see how stackless.select() can be used [http://stacklessexamples.googlecode.com/svn/trunk/sandbox/select/simpleSanta.py Download]
